# semiflow

./: .gitignore  .gitnexusignore  .secrets.baseline  .trufflehog-exclude.txt  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  clippy.toml  deny.toml  pyrightconfig.json  rustfmt.toml
crates/semiflow-core/: Cargo.toml  README.md
crates/semiflow-core/benches/: advdiff_2d.rs  cache_phase4.rs  diffusion6_simd.rs  heat_1d.rs  heat_2d.rs  new_kernels3.rs  new_kernels4.rs  ns2d_aniso_parallel.rs  strang2d_parallel.rs  strang3d_parallel.rs
crates/semiflow-core/examples/: README.md  cev_european_call.rs  heston_pricer.rs  latency_tail.rs  rough_heston_pricer.rs  sabr_pricer.rs  strang_advdiff_demo.rs
crates/semiflow-core/src/: adaptive.rs  adjoint.rs  adjoint_fp.rs  adjoint_fp_tests.rs  boundary.rs  boundary_tests.rs  carnot_complex_helpers.rs  carnot_stepk_helpers.rs  cheb_nodes_n256_data.rs  cheb_nodes_n512_data.rs  cheb_nodes_n64_128_data.rs  chernoff.rs  controller.rs  diffusion.rs  diffusion4.rs  diffusion4_generic.rs  diffusion4_helpers.rs  diffusion4_zeta4.rs  diffusion6.rs  diffusion6_generic.rs  diffusion6_helpers.rs  diffusion6_helpers_f32.rs  diffusion6_zeta6.rs  diffusion8_zeta8.rs  diffusion_helpers.rs  diffusion_zeta_common.rs  drift_reaction.rs  dual.rs  dual_tests.rs  error.rs  gen_quadrature.rs  graph.rs  graph_adjoint_presampled.rs  graph_heat.rs  graph_heat4.rs  graph_heat6.rs  graph_sensitivity.rs  graph_sensitivity_helpers.rs  graph_sensitivity_tests.rs  graph_signal.rs  (+93 more)
crates/semiflow-core/tests/: adaptive_2d_heat.rs  adaptive_cev_efficiency.rs  adaptive_f9_cev_variance.rs  adaptive_unit.rs  adjoint_zero_alloc.rs  adversarial_qa_probe.rs  anisotropic_shift_nd_d2_slope.rs  anisotropic_shift_nd_d3_slope.rs  anisotropic_shift_nd_d4_slope.rs  anisotropic_shift_nd_d5_slope.rs  apply_into_byte_equal.proptest-regressions  apply_into_byte_equal.rs  approximation_subspace.rs  binding_adjoint_fp_parity.rs  binding_carnot_cplx3_parity.rs  binding_greeks_parity.rs  binding_resolvent_jump_nd_parity.rs  binding_resolvent_jump_parity.rs  binding_reverse_ad_parity.rs  binding_smolyak_parity.rs  binding_wentzell_parity.rs  boundary_dirichlet_neumann_round_trip.proptest-regressions  boundary_dirichlet_neumann_round_trip.rs  boundary_linear_extrap.rs  cev_boundary_stress.rs  cev_european_call_sweep.rs  cev_high_lam_oracle.rs  chernoff1d_parallel_bit_equal.rs  chernoff_f32_native.rs  convergence_graph.rs  convergence_rate.rs  convergence_rate_4th.rs  convergence_rate_6th.rs  convergence_rate_6th_2d.rs  diff_scipy.rs  diffusion4_unit.rs  diffusion_const_a.rs  diffusion_with_closure.rs  dual_ad_gradient.rs  dual_zero_alloc.rs  (+140 more)
crates/semiflow-ffi/: Cargo.toml  README.md  cbindgen.toml
crates/semiflow-ffi/examples/: graph_heat.c  greeks.c  heat.c  heat_var_a.c
crates/semiflow-ffi/include/: semiflow.h  semiflow_graph.h
crates/semiflow-ffi/src/: adaptive_ffi.rs  adjoint_ffi.rs  adjoint_fp_ffi.rs  aniso_nd2_ffi.rs  aniso_nd3_ffi.rs  bc_ffi.rs  bc_ffi2.rs  bc_ffi3.rs  carnot_ffi.rs  cdr_ffi.rs  diffusion_extra_ffi.rs  diffusion_hi_ffi.rs  diffusion_hi_zeta_ffi.rs  drift_reaction_zeta4_ffi.rs  expmv_ffi.rs  graph_adjoint_ffi.rs  graph_ffi_v2_4.rs  graph_heat_extra_ffi.rs  graph_vc_ghc_ffi.rs  greeks.rs  gridless_ffi.rs  handle.rs  howland_ffi.rs  hypoelliptic_engel_ffi.rs  hypoelliptic_ffi.rs  killing_soft_ffi.rs  laplacian_ffi.rs  lib.rs  manifold_ffi.rs  matrix_2d3d_ffi.rs  matrix_ffi.rs  nonsep_ffi.rs  nonsep_ffi_helpers.rs  obstacle_ffi.rs  obstacle_gamma_ffi.rs  obstacle_nd_ffi.rs  panic.rs  point_eval_ffi.rs  quantum_graph_ffi.rs  resolvent_jump_ffi.rs  (+15 more)
crates/semiflow-ffi/tests/: binding_adjoint_fp_parity_ffi.rs  binding_greeks_parity_ffi.rs  binding_resolvent_jump_parity_ffi.rs  binding_wentzell_parity_ffi.rs  ffi_caller_owned.rs  ffi_edge_cases.rs  ffi_graph_basics.rs  ffi_graph_evolve.rs  ffi_graph_null_handling.rs  ffi_graph_panic_boundary.rs  ffi_round_trip.rs  ffi_s3_smoke.rs  ffi_v3_smoke.rs  laplacian_ffi_smoke.rs  obstacle_gamma_ffi_smoke.rs
crates/semiflow-py/: Cargo.toml  README.md  pyproject.toml  pyrightconfig.json
crates/semiflow-py/benches/: evolve_bench.rs
crates/semiflow-py/src/: adaptive.rs  adjoint.rs  adjoint_fp_py.rs  anisotropic_nd.rs  anisotropic_nd2.rs  anisotropic_nd3.rs  anisotropic_nd_helpers.rs  bc_kernels.rs  bc_kernels2.rs  boundary.rs  carnot_complex_py.rs  coeff.rs  coeff2d.rs  conservative_py.rs  diffusion_extra.rs  diffusion_extra2.rs  diffusion_hi.rs  diffusion_hi_helpers.rs  drift_reaction_py.rs  drift_reaction_zeta4_py.rs  dtype_dispatch.rs  error.rs  expmv_py.rs  geometry.rs  geometry_hypoelliptic.rs  graph_adjoint.rs  graph_extra.rs  graph_extra_heat.rs  graph_heat_f32.rs  graph_krylov_py.rs  graph_py.rs  graph_sensitivity_py.rs  graph_v2_4.rs  greeks_py.rs  gridless_py.rs  handle.rs  hormander_py.rs  killing_soft_py.rs  laplacian_introspect.rs  lib.rs  (+39 more)
crates/semiflow-py/tests/: binding_obstacle_gamma_parity_py.rs  binding_reverse_ad_parity_py.rs  binding_wentzell_parity_py.rs  smoke_graph.py  test_adaptive.py  test_adjoint.py  test_adjoint_fp_v8.py  test_async_chunked_v8.py  test_boundary.py  test_carnot_cplx3_v8.py  test_coeff.py  test_d1_d4_fixes.py  test_diffusion_hi.py  test_drift_reaction.py  test_dtype_f32.py  test_graph_batched.py  test_graph_extra.py  test_graph_heat6.py  test_graph_krylov_py.py  test_greeks_v8.py  test_heat.py  test_heat_2d.py  test_heat_3d.py  test_issue_15_pyo3.py  test_magnus6.py  test_new_operators.py  test_nonseparable.py  test_obstacle.py  test_obstacle_gamma_v8.py  test_resolvent_jump_nd_v8.py  test_resolvent_jump_v8.py  test_s3_engines.py  test_schrodinger.py  test_shift1d.py  test_smolyak_v8.py  test_v3_smoke.py  test_v4_1_apis.py  test_var_a.py  test_varcoef_magnus.py  test_wave_p1.py  (+8 more)
crates/semiflow-wasm/: Cargo.toml  README.md
crates/semiflow-wasm/npm/: package.json.tmpl
crates/semiflow-wasm/src/: adaptive_wasm.rs  adjoint_fp_wasm.rs  adjoint_wasm.rs  aniso_nd_wasm.rs  bc_wasm.rs  (+45 more)
(+855 files in other folders)
