[package]
name = "semiflow-ffi"
description = "C ABI (cdylib) bindings for semiflow-core evolution-equation / PDE engines (experimental, ABI unstable until v1.0)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
publish = false

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
num-complex = { version = "0.4", default-features = false, features = ["libm"] }
semiflow-core = { path = "../semiflow-core", default-features = false, features = ["std"] }

[dev-dependencies]
cbindgen = "=0.27"

[lints]
workspace = true
