[package]
name = "semiflow-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
# wasm-pack <=0.9.1 cannot resolve workspace-inherited fields (fails with
# "invalid type: map, expected a string").  Inline all fields it reads.
license = "MIT OR Apache-2.0"
authors = ["Ilia Volkov <ilia.volkov@outlook.com>"]
repository = "https://github.com/VolkovIlia/semiflow"
readme = "README.md"
description = "WebAssembly bindings for semiflow-core (1D heat, unit diffusion)"
publish = false  # npm distribution deferred to v0.11.0

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# full = heavy grid engines (higher-order/2D/3D/Schrödinger/BC/...); lite default keeps the bundle small.
full = []

[dependencies]
num-complex = { version = "0.4", default-features = false }
semiflow-core = { path = "../semiflow-core", default-features = false, features = ["std"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints]
workspace = true

# wasm-pack 0.9.1 bundles a wasm-opt that is too old to handle multi-table
# wasm output from current Rust ("Only 1 table definition allowed in MVP").
# Disable wasm-opt in both the default release and the new release-wasm profile.
# Size optimisations come from [profile.release-wasm] rustc flags (D2, v0.13.0)
# rather than from wasm-opt post-processing.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.release-wasm]
wasm-opt = false
