[package]
name = "semiflow-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
# wasm-pack <=0.9.1 cannot resolve workspace-inherited fields (fails with
# "invalid type: map, expected a string").  Inline all fields it reads.
license = "MIT OR Apache-2.0"
authors = ["Ilia Volkov <ilia.volkov@outlook.com>"]
repository = "https://github.com/VolkovIlia/semiflow"
readme = "README.md"
description = "WebAssembly (wasm-bindgen) bindings for semiflow evolution-equation / PDE engines; `full` feature for heavy-grid engines (experimental)"
publish = false  # npm distribution deferred to v0.11.0

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# full = heavy grid engines (higher-order/2D/3D/Schrödinger/BC/...); lite default keeps the bundle small.
full = []

[dependencies]
num-complex = { version = "0.4", default-features = false }
semiflow = { path = "../semiflow", default-features = false, features = ["std"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints]
workspace = true

# wasm-pack 0.15.0 bundles wasm-opt 117 (supports bulk-memory ops).  The
# default release path enables wasm-opt with --enable-bulk-memory so that the
# bulk-memory opcodes emitted by the Rust toolchain (memcpy/memset intrinsics)
# pass wasm-validator; without this flag wasm-opt 117 rejects the binary.
#
# The `--size` path (xtask wasm-build --size) uses `--no-opt` to skip wasm-pack's
# bundled wasm-opt entirely: wasm-pack 0.15.0 does not recognise the custom
# "release-wasm" profile key (it warns "unknown key and will be ignored") and
# falls back to running wasm-opt with `-O` only, which also rejects bulk-memory.
# Size is optimised by the `[profile.release-wasm]` rustc flags (opt-level=z,
# lto=fat, codegen-units=1, strip=true) — see D2 (v0.13.0) and ADR-0028.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory"]

# Kept for documentation; wasm-pack 0.15.0 ignores this key with a warning.
# The --size xtask path passes --no-opt to avoid the bulk-memory validator error.
[package.metadata.wasm-pack.profile.release-wasm]
wasm-opt = ["-O", "--enable-bulk-memory"]
