[package]
name = "semiflow-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
# wasm-pack <=0.9.1 cannot resolve workspace-inherited fields (fails with
# "invalid type: map, expected a string").  Inline all fields it reads.
license = "MIT OR Apache-2.0"
authors = ["Ilia Volkov <ilia.volkov@outlook.com>"]
repository = "https://github.com/VolkovIlia/semiflow"
readme = "README.md"
description = "WebAssembly (wasm-bindgen) bindings for semiflow evolution-equation / PDE engines; `full` feature for heavy-grid engines (experimental)"
publish = false  # npm distribution deferred to v0.11.0

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# full = heavy grid engines (higher-order/2D/3D/Schrödinger/BC/...); lite default keeps the bundle small.
full = []

[dependencies]
num-complex = { version = "0.4", default-features = false }
semiflow = { path = "../semiflow", default-features = false, features = ["std"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints]
workspace = true

# wasm-opt is disabled for both profiles.  The wasm32 target emits bulk-memory
# opcodes (memcpy/memset intrinsics) and different OS runners bundle different
# wasm-opt versions: Ubuntu's wasm-opt accepts --enable-bulk-memory, macOS's
# rejects it with "error in parsing input".  Enabling wasm-opt would therefore
# be non-portable across the CI matrix.  Size optimisation comes entirely from
# the [profile.release-wasm] cargo flags (opt-level=z, lto=fat, codegen-units=1,
# strip=true) — see D2 (v0.13.0) and ADR-0028.
#
# The xtask wasm-build --size path additionally passes --no-opt to wasm-pack
# because wasm-pack 0.15.0 does not recognise the custom "release-wasm" profile
# key (warns "unknown key and will be ignored") and would otherwise run its
# default wasm-opt pass.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# wasm-pack 0.15.0 ignores this key (warns "unknown key and will be ignored");
# the --size xtask path passes --no-opt explicitly.
[package.metadata.wasm-pack.profile.release-wasm]
wasm-opt = false
